[gd_scene load_steps=13 format=3 uid="uid://dc67rgul2jeyv"]

[ext_resource type="Script" path="res://map-creator/MapCreatorControl.gd" id="1_yif36"]
[ext_resource type="PackedScene" uid="uid://bjn216f0xxwjc" path="res://utils/DictProperty.tscn" id="2_chocf"]
[ext_resource type="Script" path="res://map-creator/SVPContainerMapView.gd" id="3_ed66u"]
[ext_resource type="PackedScene" uid="uid://danpho43p7mup" path="res://map-creator/MapView.tscn" id="4_t6mls"]
[ext_resource type="PackedScene" uid="uid://d1xbj35rutf18" path="res://utils/ConfirmDialogAsync.tscn" id="6_7l1ty"]
[ext_resource type="PackedScene" uid="uid://dxy2gpemojfnr" path="res://map-creator/MapComposer.tscn" id="7_f7ynj"]
[ext_resource type="Script" path="res://map-creator/DatabaseFileDialog.gd" id="7_qiabe"]
[ext_resource type="PackedScene" uid="uid://b876tdeecktcr" path="res://utils/ModuleDatabaseRWAdapter.tscn" id="8_11ggo"]
[ext_resource type="PackedScene" uid="uid://cwrgrkmmomtfn" path="res://map-creator/sub-composers/DemoComposer.tscn" id="8_vy2qe"]
[ext_resource type="PackedScene" uid="uid://cc3s1jqv47qgl" path="res://map-creator/Library2TileConverter.tscn" id="9_mp2oe"]
[ext_resource type="PackedScene" uid="uid://2pm1gnt1y3c" path="res://map-creator/MapDatabaseAdapter.tscn" id="9_q2cax"]
[ext_resource type="PackedScene" uid="uid://ckr0tepfuifuc" path="res://map-creator/TileDatabaseAdapter.tscn" id="10_cp806"]

[node name="MapCreatorControl" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_yif36")

[node name="HBMain" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="DictProperty" parent="HBMain" instance=ExtResource("2_chocf")]
layout_mode = 2
size_flags_vertical = 1

[node name="VBMain" type="VBoxContainer" parent="HBMain"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="SVPContainer" type="SubViewportContainer" parent="HBMain/VBMain"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("3_ed66u")

[node name="SVP" type="SubViewport" parent="HBMain/VBMain/SVPContainer"]
handle_input_locally = false
physics_object_picking = true
render_target_update_mode = 4

[node name="MapView" parent="HBMain/VBMain/SVPContainer/SVP" instance=ExtResource("4_t6mls")]

[node name="VBFaceVectorView" type="VBoxContainer" parent="HBMain"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="ConfirmDialogAsync" parent="." instance=ExtResource("6_7l1ty")]
initial_position = 2

[node name="DatabaseFileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.db")
show_hidden_files = true
script = ExtResource("7_qiabe")

[node name="MapComposer" parent="." instance=ExtResource("7_f7ynj")]

[node name="DemoComposer1" parent="MapComposer" instance=ExtResource("8_vy2qe")]
mesh_priority = 1

[node name="DemoComposer2" parent="MapComposer" instance=ExtResource("8_vy2qe")]
mesh_color = Color(0, 1, 1, 1)

[node name="MapDatabaseAdapter" parent="MapComposer" instance=ExtResource("9_q2cax")]

[node name="ModuleDatabaseAdapter" parent="." instance=ExtResource("8_11ggo")]

[node name="Library2TileConverter" parent="." instance=ExtResource("9_mp2oe")]

[node name="TileDatabaseAdapter" parent="." instance=ExtResource("10_cp806")]
